# doom

./: .bazelrc  .gitignore  BUILD  Dockerfile  README.md  TODO.md  WORKSPACE  doom.go  generated.go  go.mod  go.sum  gqlgen.yml  models_gen.go  resolver.go  schema.graphql
.github/workflow/: go.yml
.github/workflows/: image.yml
cmd/: BUILD.bazel  cli.go  flag.go
cmd/options/: options.go  options_test.go
cmd/run/: run.go
cmd/schedule/: schedule.go
cmd/server/: server.go
cmd/start/: BUILD.bazel  config.go  start.go  stop.go
cmd/token/: BUILD.bazel  token.go
cmd/update/: BUILD.bazel  update.go
cmd/update/odd/: BUILD.bazel  odd.go
cmd/update/result/: BUILD.bazel  result.go
cmd/update/updateutil/: BUILD.bazel  updateutil.go
gql/: resolver.go
pkg/client/: BUILD.bazel  client.go  client_test.go
pkg/client/crawl/: BUILD.bazel  crawl.go  crawl_test.go
pkg/config/: config.go  config_test.go
pkg/fetch/: fetch.go  fetch_test.go
pkg/function/: http.go  http_test.go
pkg/helper/: client.go  client_test.go  flatten.go  flatten_test.go  helper.go  helper_test.go  loop.go  metric.go  metric_test.go  tag_test.go
pkg/helper/client/: client.go  client_test.go
pkg/helper/crawl/: crawl.go  crawl_test.go
pkg/helper/file/: file.go  file_test.go
pkg/helper/flatten/: flatten.go  flatten_test.go
pkg/helper/tag/: helper.go  helper_test.go  tag_test.go
pkg/index/: BUILD.bazel  index.go
pkg/index/bleve/: BUILD.bazel  bleve.go  bleve_test.go
pkg/index/inverted/: BUILD.bazel  inverted.go  inverted_test.go
pkg/index/store/: BUILD.bazel  parse.go  store.go  store_test.go
pkg/jsonpath/: parse.go
pkg/model/: BUILD.bazel  match.go  match_test.go  model.go  model_test.go  odd.go  odd_test.go
pkg/model/detail/: BUILD.bazel  detail.go  detail_json.go  detail_test.go
pkg/model/history/: BUILD.bazel  history.go  history_test.go
pkg/model/match/: BUILD.bazel  match.go  match_json.go  match_raw.go  match_test.go
pkg/model/noop/: BUILD.bazel  noop.go  noop_test.go
pkg/model/odd/: BUILD.bazel  odd.go  odd_json.go  odd_raw.go  odd_test.go
pkg/schedule/: BUILD.bazel  schedule.go  schedule_test.go
pkg/schedule/job/: BUILD.bazel  job.go  job_test.go  pipe_test.go
pkg/schema/: match.go  schema.go  schema_test.go
pkg/schema/schemautil/: parse.go  parse_test.go  schemautil.go  schemautil_test.go  tag.go  tag_test.go
pkg/service/: BUILD.bazel  service_test.go
pkg/service/jc/: jc.go  jc_test.go
pkg/service/radar/: radar.go  radar_test.go
pkg/store/: BUILD.bazel  store.go  store_test.go
pkg/store/badger/: BUILD.bazel  badger.go  badger_test.go
pkg/store/bolt/: BUILD.bazel  bolt.go  bolt_test.go
pkg/store/drive/: drive.go  drive_test.go
pkg/store/fs/: BUILD.bazel  file.go  file_test.go  fs.go  fs_test.go  target.go
pkg/store/fs/drive/: BUILD.bazel  token.go
pkg/store/fs/file/: BUILD.bazel  file.go  file_test.go
pkg/tap/: BUILD.bazel  tap.go  tap_test.go
pkg/tap/backfill/: backfill.go  backfill_test.go
pkg/tap/backfill/model/: entry.go  entry_test.go
pkg/tap/history/: BUILD.bazel  history.go  history_test.go
pkg/tap/jc/: jc.go  jc_test.go
pkg/tap/jc/model/: odd.go  odd_test.go
pkg/tap/jockey/: BUILD.bazel  client.go  client_test.go  jc.go  jc_test.go  odd.go  odd_test.go  result.go  result_test.go
pkg/tap/match/: match.go  match_test.go
pkg/tap/radar/: BUILD.bazel  radar.go  radar_test.go
pkg/tap/radar/model/: match_test.go
pkg/tap/score/: parser.go  parser_test.go  score.go  score_test.go
pkg/transform/: BUILD.bazel  transform.go
pkg/transform/jockey/: BUILD.bazel  jockey.go  jockey_test.go
proto/env/: BUILD.bazel
proto/model/: BUILD.bazel  index.proto  match.proto  odd.proto
proto/service/: BUILD.bazel  service.proto
proto/source/jockey/: BUILD.bazel  jockey.proto
server/: server.go
testdata/: bet  config.yml  details  fha  fullfeed  had  hft  hha  result  stream  team
testutil/: BUILD.bazel  index.go  store.go  tap.go  testutil.go
