load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cli.go"],
    importpath = "github.com/twistedogic/doom/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/start:go_default_library",
        "//cmd/token:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)
