load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "index.go",
        "store.go",
        "tap.go",
        "testutil.go",
    ],
    importpath = "github.com/twistedogic/doom/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/index:go_default_library",
        "//pkg/store:go_default_library",
        "//pkg/tap:go_default_library",
        "//proto/model:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
