load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["update.go"],
    importpath = "github.com/twistedogic/doom/cmd/update",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/update/odd:go_default_library",
        "//cmd/update/result:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
