load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["model.go"],
    importpath = "github.com/twistedogic/doom/pkg/model",
    visibility = ["//visibility:public"],
    deps = ["//pkg/store:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["model_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testutil:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
