load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "model_proto",
    srcs = [
        "index.proto",
        "match.proto",
        "odd.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "model_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogofaster_proto"],
    importpath = "github.com/twistedogic/doom/proto/model",
    proto = ":model_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":model_go_proto"],
    importpath = "github.com/twistedogic/doom/proto/model",
    visibility = ["//visibility:public"],
)
