load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["updateutil.go"],
    importpath = "github.com/twistedogic/doom/cmd/update/updateutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/store/badger:go_default_library",
        "//pkg/tap/jockey:go_default_library",
        "//pkg/transform:go_default_library",
        "//pkg/transform/jockey:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
