load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["crawl.go"],
    importpath = "github.com/twistedogic/doom/pkg/client/crawl",
    visibility = ["//visibility:public"],
    deps = ["@com_github_puerkitobio_goquery//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["crawl_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
