load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "parse.go",
        "store.go",
    ],
    importpath = "github.com/twistedogic/doom/pkg/index/store",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/index:go_default_library",
        "//pkg/store:go_default_library",
        "@com_github_json_iterator_go//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["store_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testutil:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
