load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["noop.go"],
    importpath = "github.com/twistedogic/doom/pkg/model/noop",
    visibility = ["//visibility:public"],
    deps = ["//pkg/model:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["noop_test.go"],
    data = ["//:testdata"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/model:go_default_library",
        "//testutil:go_default_library",
    ],
)
