load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["badger.go"],
    importpath = "github.com/twistedogic/doom/pkg/store/badger",
    visibility = ["//visibility:public"],
    deps = ["@com_github_dgraph_io_badger_v2//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["badger_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/store:go_default_library",
        "//testutil:go_default_library",
    ],
)
