load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bolt.go"],
    importpath = "github.com/twistedogic/doom/pkg/store/bolt",
    visibility = ["//visibility:public"],
    deps = ["@io_etcd_go_bbolt//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["bolt_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/store:go_default_library",
        "//testutil:go_default_library",
    ],
)
