load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["fs.go"],
    importpath = "github.com/twistedogic/doom/pkg/store/fs",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["fs_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/store:go_default_library",
        "//testutil:go_default_library",
    ],
)
