load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["history.go"],
    importpath = "github.com/twistedogic/doom/pkg/tap/history",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client:go_default_library",
        "//pkg/client/crawl:go_default_library",
        "//pkg/tap:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["history_test.go"],
    data = ["//:testdata"],
    embed = [":go_default_library"],
    deps = [
        "//testutil:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
