load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "odd.go",
        "result.go",
    ],
    importpath = "github.com/twistedogic/doom/pkg/tap/jockey",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client:go_default_library",
        "//pkg/store:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "client_test.go",
        "odd_test.go",
        "result_test.go",
    ],
    data = ["//:testdata"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/tap:go_default_library",
        "//testutil:go_default_library",
    ],
)
