load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "jockey_proto",
    srcs = ["jockey.proto"],
    visibility = ["//visibility:public"],
    deps = ["@gogo_special_proto//github.com/gogo/protobuf/gogoproto"],
)

go_proto_library(
    name = "jockey_go_proto",
    compilers = ["@io_bazel_rules_go//proto:gogofaster_proto"],
    importpath = "github.com/twistedogic/doom/proto/source/jockey",
    proto = ":jockey_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gogo_protobuf//gogoproto:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":jockey_go_proto"],
    importpath = "github.com/twistedogic/doom/proto/source/jockey",
    visibility = ["//visibility:public"],
)
